--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-router-dom": "^6.22.0",
     "react-toggle-dark-mode": "^1.1.1"
   },
   "devDependencies": {
