--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,30 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
+    "@types/jquery": "^3.5.29",
+    "@types/js-cookie": "^3.0.6",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.7",
+    "datatables.net-responsive-dt": "^3.0.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.3",
+    "js-cookie": "^3.0.5",
+    "js-cookies": "^1.0.4",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "preline": "^2.0.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
+    "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.0",
-    "react-toggle-dark-mode": "^1.1.1"
+    "react-toastify": "^10.0.5",
+    "react-toggle-dark-mode": "^1.1.1",
+    "swr": "^2.2.5",
+    "wretch": "^2.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
