adding azure stuff

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
     "@types/jquery": "^3.5.29",
@@ -20,6 +21,9 @@
     "axios": "^1.6.7",
     "datatables.net-responsive-dt": "^3.0.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.0.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.8.0",
     "framer-motion": "^11.0.3",
     "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
@@ -27,6 +31,7 @@
     "next": "14.1.0",
     "next-auth": "^4.24.7",
     "next-themes": "^0.2.1",
+    "nextjs-tui-date-picker": "^2.2.3",
     "preline": "^2.0.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
@@ -34,9 +39,11 @@
     "react-hook-form": "^7.51.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.22.0",
+    "react-time-picker": "^6.6.0",
     "react-toastify": "^10.0.5",
     "react-toggle-dark-mode": "^1.1.1",
     "swr": "^2.2.5",
+    "tailwind-datepicker-react": "^1.4.3",
     "wretch": "^2.8.1"
   },
   "devDependencies": {
