--- a/.github/workflows/main_c0027816-devproject-django.yml
+++ b/.github/workflows/main_c0027816-devproject-django.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Django to Azure - c0027816-devproject-django
 
 on:
@@ -10,48 +6,37 @@ on:
       - main
   workflow_dispatch:
 
-defaults:
-  run:
-    working-directory: ./backend
-
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.11'
+    - name: Set up Python version
+      uses: actions/setup-python@v1
+      with:
+        python-version: '3.11'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+    - name: Create and start virtual environment
+      run: |
+        python -m venv venv
+        source venv/bin/activate
+      working-directory: ./backend
 
-      - name: Check contents before zipping
-        run: ls -alh
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+      working-directory: ./backend
 
-      - name: Zip artifact for deployment
-        run: |
-          zip -r release.zip ./* -x "venv/*"
+    - name: Zip artifact for deployment
+      run: zip -r release.zip ./* -x "venv/*"
+      working-directory: ./backend
 
-      - name: Check zip contents
-        run: unzip -l release.zip
-
-      - name: List files in the working directory
-        run: ls -la
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: ./backend/release.zip
+    - name: Upload artifact for deployment jobs
+      uses: actions/upload-artifact@v3
+      with:
+        name: python-app
+        path: backend/release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -59,20 +44,20 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: python-app
 
-      - name: Unzip artifact for deployment
-        run: unzip python-app/release.zip -d ./
+    - name: Unzip artifact for deployment
+      run: unzip python-app -d ./
 
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'c0027816-devproject-django'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C92AA3163B154865863CF235DF1E462C }}
-          package: ./release.zip
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'c0027816-devproject-django'
+        slot-name: 'Production'
+        publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C92AA3163B154865863CF235DF1E462C }}
+        package: ./python-app
