--- a/.github/workflows/main_c0027816-devproject-django.yml
+++ b/.github/workflows/main_c0027816-devproject-django.yml
@@ -49,10 +49,10 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
-        name: python-app
+        name: release
 
     - name: Unzip artifact for deployment
-      run: unzip python-app -d ./
+      run: unzip release -d ./
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -60,4 +60,4 @@ jobs:
         app-name: 'c0027816-devproject-django'
         slot-name: 'Production'
         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C92AA3163B154865863CF235DF1E462C }}
-        package: ./python-app
+        package: ./release
