--- a/.github/workflows/main_c0027816-devproject-react.yml
+++ b/.github/workflows/main_c0027816-devproject-react.yml
@@ -26,7 +26,9 @@ jobs:
         working-directory: ./frontend
 
       - name: Build Next.js app
-        run: npm run build
+        run: |
+        npm run build
+        mv .next/static .next/standalone/.next/static
         working-directory: ./frontend
 
       - name: Upload artifact for deployment jobs
